<resources>
    <string name="app_name">Rate My Apartment</string>
    <string name="per_month">/mo</string>
    <string name="util"> util</string>
    <string name="top_labels">Top Labels</string>
    <string name="amenities">AMENITIES</string>
    <string name="contact">CONTACT</string>
    <string name="reviews">REVIEWS</string>
    <string name="getting_around">GETTING AROUND</string>
    <string name="to_campus">to campus</string>
    <string name="to_uvx">to UVX</string>
    <string name="to_grocer">to nearest grocer</string>
    <string name="find">Find Your New Home Today</string>
    <string name="favorites">Your Favorites</string>
    <string name="profile">find apartments you\'re interested in</string>
    <string name="prices">Select Max Price</string>
    <string name="tags">Select Tags</string>
    <string name="rating">Select Minimum Rating</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
