<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/flProfileFragment"
    tools:context=".view.ProfileFragment">

<ScrollView
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1D1D1"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="100dp">

        <RelativeLayout
            android:id="@+id/relativeLayoutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            ​
            <ImageView
                android:id="@+id/homeHeaderImage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:tint="#5089fa"/>

            ​
            <TextView
                android:id="@+id/headerNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/homeHeaderImage"
                android:layout_alignTop="@id/homeHeaderImage"
                android:layout_alignRight="@id/homeHeaderImage"
                android:layout_alignBottom="@id/homeHeaderImage"
                android:layout_margin="1dp"
                android:gravity="bottom|left"
                android:text="@string/profile"
                android:textSize="15sp"
                android:fontFamily="@font/roboto_bold"
                android:paddingLeft="15dp"
                android:paddingBottom="15dp"
                android:textColor="#FFFFFF" />
            ​
            ​ ​
        </RelativeLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/priceCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="30dp"
            android:background="#ffffff"
            app:contentPadding="20dp"
            app:cardElevation="12dp"
            app:cardMaxElevation="36dp"
            android:elevation="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/relativeLayoutHeader"
            tools:layout_editor_absoluteY="181dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/pricesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:text="@string/prices"
                    android:fontFamily="@font/roboto_regular"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    app:layout_constraintTop_toBottomOf="@id/pricesTextView"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/pricesListTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:fontFamily="@font/roboto_regular"
                    android:paddingLeft="10dp"
                    app:layout_constraintTop_toBottomOf="@id/spinner1"
                    app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/ratingsCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="30dp"
            android:background="#ffffff"
            app:contentPadding="20dp"
            app:cardElevation="12dp"
            app:cardMaxElevation="36dp"
            android:elevation="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priceCardView"
            tools:layout_editor_absoluteY="181dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/ratingsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:text="@string/rating"
                    android:fontFamily="@font/roboto_regular"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    app:layout_constraintTop_toBottomOf="@id/ratingsTextView"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/ratingsListTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:fontFamily="@font/roboto_regular"
                    android:paddingLeft="10dp"
                    app:layout_constraintTop_toBottomOf="@id/spinner2"
                    app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/tagsCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="30dp"
            android:background="#ffffff"
            app:contentPadding="20dp"
            app:cardElevation="12dp"
            app:cardMaxElevation="36dp"
            android:elevation="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratingsCardView"
            tools:layout_editor_absoluteY="181dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tagsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:text="@string/tags"
                    android:fontFamily="@font/roboto_regular"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    app:layout_constraintTop_toBottomOf="@id/tagsTextView"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tagsListTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:fontFamily="@font/roboto_regular"
                    android:paddingLeft="10dp"
                    app:layout_constraintTop_toBottomOf="@id/spinner3"
                    app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>

<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/fab"
    app:fabCustomSize="50dp"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:layout_gravity="bottom|end"
    android:background="@color/white"
    android:layout_margin="15dp"/>

</FrameLayout>